create BOM BomDTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# DATASOURCE
+spring.datasource.url=jdbc:mysql://gongzone.cicfcns8xxeg.us-east-1.rds.amazonaws.com:3306/gongzone?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
+
+spring.datasource.username=donghyeon
+spring.datasource.password=gongzone1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.data.jpa.repositories.enabled=true
+spring.jpa.properties.hibernate.format_sql=true
+#
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
 
