--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+# DATASOURCE
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
+spring.datasource.username=root
+spring.datasource.password=qq3463af!!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# JPA
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.data.jpa.repositories.enabled=true
+spring.jpa.properties.hibernate.format_sql=true
