--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DATASOURCE
-spring.datasource.url=jdbc:mysql://gongzone.cicfcns8xxeg.us-east-1.rds.amazonaws.com:3306/gongzone?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
+spring.datasource.url=jdbc:mysql://localhost:3306/gongzone?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
 
-spring.datasource.username=donghyeon
-spring.datasource.password=gongzone1
+spring.datasource.username=scott
+spring.datasource.password=tiger
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA
 spring.jpa.hibernate.ddl-auto=none
