--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=qq3463af!!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
