--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,7 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+/bin
+
 ### properties ###
 application.properties
