--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final' // MapStruct
+	
+	compileOnly 'org.projectlombok:lombok' 
+	//compileOnly 'org.projectlombok:lombok-mapstruct-binding:0.2.0' // MapStruct
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok' 
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final' // MapStruct
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
