chore: Update to ddl-auto none
Update to ddl-auto none

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=scott
 spring.datasource.password=tiger
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
