--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,8 @@ Temporary Items
 .gradle/7.5/fileHashes/fileHashes.lock
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .project
+.gradle/7.5/executionHistory/executionHistory.bin
+.gradle/7.5/fileHashes/fileHashes.bin
+.gradle/7.5/fileHashes/resourceHashesCache.bin
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/file-system.probe
