--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       hibernate:
         format_sql: 'true'
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: 'true'
 
 
