--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ gradle-app.setting
 
 ### properties ###
 application.properties
+.gradle/7.5/checksums/md5-checksums.bin
+.gradle/7.5/checksums/sha1-checksums.bin
