--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 }
 
 dependencies {
+ 	// spring cloud starter aws
+    implementation('org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE')
+    
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
