--- a/src/main/resources/application-credentials.yml
+++ b/src/main/resources/application-credentials.yml
@@ -1,7 +1,7 @@
 cloud:
   aws:
     credentials:
-      accessKey: AKIAT36Y7MRMY4Q7QQIT
-      secretKey: 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
+      accessKey: AKIAT36Y7MRM2YQZ2U4L
+      secretKey: 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
 
        
