--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@ gradle-app.setting
 
 ### properties ###
 application.properties
+*.yaml
+*.yml
+src/main/resources/application-aws.yaml
+src/main/resources/application-credentials.yaml
+src/main/resources/application.yaml
+src/main/resources/application.yml
