--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ src/main/resources/application-aws.yaml
 src/main/resources/application-credentials.yaml
 src/main/resources/application.yaml
 src/main/resources/application.yml
+*.yaml
+src/main/resources/application-aws.yaml
+src/main/resources/application-credentials.yaml
+src/main/resources/application.yaml
