--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.2'
-	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
-	id 'java'
+   id 'org.springframework.boot' version '2.7.2'
+   id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+   id 'java'
 }
 
 group = 'gongzone'
@@ -11,41 +11,42 @@ sourceCompatibility = '11'
 
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+   compileOnly {
+      extendsFrom annotationProcessor
+   }
 }
 
 repositories {
-	mavenCentral()
+   mavenCentral()
 }
 
 dependencies {
- 	// spring cloud starter aws
+    // spring cloud starter aws
     implementation('org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE')
     
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-aop'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
-	
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+   implementation 'org.springframework.boot:spring-boot-starter-web'
+   implementation 'org.springframework.boot:spring-boot-starter-aop'
+   implementation 'org.springframework.boot:spring-boot-starter-validation'
+   // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+   implementation 'io.springfox:springfox-swagger2:2.9.2'
+   // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+   implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+   compileOnly 'org.projectlombok:lombok'
+   annotationProcessor 'org.projectlombok:lombok'
+   developmentOnly 'org.springframework.boot:spring-boot-devtools'
+   runtimeOnly 'mysql:mysql-connector-java'
+   
+   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	
-	// Start adding mapstruct library
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
-	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
-	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0' 
+   
+   // Start adding mapstruct library
+   annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+   implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+   annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0' 
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+   useJUnitPlatform()
 
 }
