--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,22 +2,22 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: scott
-    url: jdbc:mysql://localhost:3306/scott
+    url: jdbc:mysql://localhost:3306/test
     password: tiger
   data:
     jpa:
       repositories:
-        enabled: 'true'
+        enabled: "true"
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
       hibernate:
-        format_sql: 'true'
+        format_sql: "true"
     hibernate:
-      ddl-auto: none
-    show-sql: 'true'
-  
+      ddl-auto: create
+    show-sql: "true"
+
   profiles:
-   include:
-     - aws
-     - credentials
+    include:
+      - aws
+      - credentials
