--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
       repositories:
         enabled: 'true'
   jpa:
+    open-in-view : 'false'
     database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
       hibernate:
