--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
       hibernate:
         format_sql: "true"
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: "true"
 
   profiles:
