--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ repositories {
 dependencies {
     // spring cloud starter aws
     implementation('org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE')
-    
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.9'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
