--- a/appspec.yml
+++ b/appspec.yml
@@ -15,7 +15,7 @@ hooks:
   ApplicationStart:
     - location: deploy.sh
       timeout: 60
-      runas: ec2-user
+      runas: ubuntu
 
 #
 #hooks:
