--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
-
+before_script : - chmod +x gradlew
 script: "./gradlew clean build"
 
 before_deploy:
