--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 
 branches:
     only:
-        - feature/donghyeon/travis-cicd
+        # - feature/donghyeon/travis-cicd
 
 cache:
     directories:
