--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
       hibernate:
         format_sql: "true"
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: "true"
 
   profiles:
